# Self-Study-Generative-AI

./: .gitignore  README.md
05-Inpainting/: inpainting (1).ipynb
archive/vscode_environment_tips/: README.md
bedrock-claude/: 01-Bedrock-Converse-API.ipynb
lab/00-amazon-transcribe/01-Getting-Started/: 01-scratch.ipynb
lab/01-anthropic-prompt-caching/: anthropic_prompt_caching.ipynb
lab/02-lang-graph/: README.md
lab/02-lang-graph/setup/: LAGNFUSE_README.md  README.md  create_conda_virtual_env.sh  requirements.txt
lab/02-lang-graph/warmming-up/: 01-quick-start.ipynb
lab/03-create-reel-video/: 01-create-video.ipynb
lab/03-tool-use/02-reject-sns-image/: 02-tool-use-bedrock.ipynb  investigation.ipynb
lab/03-tool-use/03-describe-person/: 01-analyze-image-tool-use.ipynb  utils_bedrock_skin_gender.py
lab/03-tool-use/04-Mask-Person-Name/: README.md  character.py
lab/05-cross-region-inference/: 01-getting-started-cross-region inference.ipynb
lab/06-create-reel-video/: 01-create-video.ipynb  local_util.py
lab/08-bedrock-knowledge-base/: 01_KB_Search.ipynb
lab/09-bedrock-batch-inference/: 01_bedrock_batch_inference.ipynb
lab/10_advanced_agentic_text2sql/01_setup/: requirements.txt
lab/10_advanced_agentic_text2sql/lab1_text2sql_schema_preparation/: 1.sample_queries.ipynb  2.detailed_schema.ipynb  (+4 more)
lab/11_bedrock_manus/: README.md  main.ipynb
lab/14_strands_agent/01_uv_setup/: create_uv_env.sh  pyproject.toml
lab/16_call_amazon_bedrock_agent/: 01_call_bedrock_agent.py
lab/17_bedrock_agent_core/00_setup/: README.md  create_uv_virtual_env.sh  main.py  pyproject.toml
lab/18_ec-customer-support-agent-bedrock_agent_core/: .gitignore  README.md
lab/19_dual_model_chatbot/: QUICKSTART.md  README.md  nova_dual_chatbot.py  quick_test.py  single_test.py  test_nova_models.py
lab/20_deep_insight/: .bedrock_agentcore.yaml  .dockerignore  .env.backup.us-east-1  .env.backup.us-west-2  .env.example  .gitignore  01_create_agentcore_runtime.py  01_create_agentcore_runtime_vpc.py  01_create_test3_runtime.py  01_create_test_runtime.py  02_agentcore_runtime.py  02_invoke_agentcore_runtime_vpc.py  03_download_artifacts.py  03_invoke_agentcore_job_vpc.py  05_insight_extractor_strands_sdk_workshop_phase_2.code-workspace  09.cleanup_orphaned_fargate_tasks.sh  CLAUDE.md  CLAUDE.md.backup_20251105_detailed  DEV_ACCOUNT_GUIDE.md  Dockerfile  PHASE3_EXECUTION_GUIDE.md  PRODUCTION_COMPARISON_CHECKLIST.md  PRODUCTION_DEPLOYMENT_WORKFLOW.md  README.md  TEST_ENV_VARS.md  agentcore_runtime.ipynb  agentcore_runtime.py  diagnose_runtime.sh  invoke_agentcore_job_vpc.py  main.py  production_report.txt  pyproject.toml  requirements.txt  test_env_vars.py  test_global_cri_model.py  update_trust_policy.py
lab/21_customer_chat/: ARCHITECTURE_PATTERNS.md  README.md  RECOMMENDED_PATTERN.md
lab/21_customer_chat/setup/: create_env.sh  pyproject.toml
lab/22_strands_session_manager/: CLAUDE.md  readme.md
lab/23_claude_skill/: README.md
lab/24_evaluate_translation/: .gitignore  README.md  claude.md  detail_evaluation.md
lab/24_evaluate_translation/setup/: create_env.sh  pyproject.toml
lang-graph/prompt_flow/: 01_basic_run_prompt.ipynb
tool-use/: 01-tool-use-scratch.ipynb
tool-use/01-getting-started/: 01-tool-use-scratch.ipynb
tool-use/02-reject-sns-image/: 02-tool-use-bedrock.ipynb  investigation.ipynb  utils.py  utils_bedrock.py
tool-use/03-describe-person/: 01-analyze-image-tool-use.ipynb  utils_bedrock_skin_gender.py
tool-use/04-Mask-Person-Name/: README.md  setup.ipynb
(+347 files in other folders)
