[project]
name = "00-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "strands-agents[litellm]>=1.1.0",
    "strands-agents-tools>=0.2.2",
    "uv>=0.8.3",
    "boto3>=1.42.0",
    "botocore>=1.40.8",
    "langchain[aws]>=0.3.27",
    "langgraph>=0.5.4",
    "langsmith[otel]>=0.4.8",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.3.27",
    "opentelemetry-instrumentation-langchain>=0.43.1",
    "bedrock-agentcore>=0.1.2",
    "bedrock-agentcore-starter-toolkit>=0.2.4",
    "aws-opentelemetry-distro~=0.10.1",
    "ddgs",
    "ipython>=8.37.0",
    "ipykernel>=6.30.0",
    "pandas>=2.3.1",
    "jupyterlab>=4.4.5",
    "openpyxl>=3.1.5",
    "jupyter>=1.1.1",
    "requests>=2.31.0",
    "streamlit>=1.28.0",
    "streamlit-cognito-auth>=0.1.0",
    "python-dotenv>=1.0.0",
    "google-auth>=2.23.0",
    "google-api-python-client>=2.100.0",
    "notebook>=7.0.0",
    "python-dateutil>=2.8.2",
    "python-json-logger>=2.0.7",
]
