[project]
name = "customer-chat-multiagent"
version = "0.1.0"
description = "Multi-Agent Customer Support System for E-commerce"
readme = "README.md"
authors = [
    {name = "customer-chat", email = "your-email@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "boto3>=1.35.50",
    "strands-agents>=1.8.0",
    "strands-agents-tools>=0.2.6",
    "bedrock-agentcore>=0.1.2",
    "bedrock-agentcore-starter-toolkit>=0.1.8",
    "mcp>=1.13.0",
    "requests-toolbelt>=1.0.0",
    "termcolor>=3.1.0",
    "python-dotenv>=1.1.1",
]
